# hacker-society

./: AGENTS.md  README.md  ROADMAP.md  configs.yaml.example  memory.json  phase_3_prompt.md  pyproject.toml  requirements.txt
docker/: Dockerfile.attacker  Dockerfile.db  Dockerfile.defender  server.py  start_vuln.py
src/: __init__.py  agent.py  environment.py  export_dataset.py  fine_tune.py  main.py  match.py  memory.py  mock_llm_server.py  model_config.py
